--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/g6": "^3.0.5-beta.7",
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
   },
