--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@antv/g6": "^3.0.5-beta.7",
+    "ant-design-vue": "^1.3.16",
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
   },
@@ -31,7 +32,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":"off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
