--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@antv/g6": "^3.0.5-beta.7",
     "ant-design-vue": "^1.3.16",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
