--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@antv/g6": "^3.0.5-beta.7",
     "ant-design-vue": "^1.3.16",
     "core-js": "^2.6.5",
+    "vcolorpicker": "^0.1.8",
     "vue": "^2.6.10"
   },
   "devDependencies": {
